--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "client",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://csmock.vercel.app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
