--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
-  "homepage": ".",
+  "homepage": "https://csmock.vercel.app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
